--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "format": "npm run lint:fix && prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
-    "prepare": "husky install"
+    "format": "npm run lint:fix && prettier --write 'src/*.{js,jsx,ts,tsx}'",
+    "prepare": "husky install",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.2",
     "@tsconfig/svelte": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "eslint": "^8.35.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
@@ -25,6 +30,24 @@
     "vite": "^4.1.0"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "npm run format"
-  }
+    "*.{ts,svelte}": [
+      "prettier --write"
+    ]
+  },
+  "dependencies": {
+    "uuid": "^9.0.0"
+  },
+  "description": "This template should help get you started developing with Svelte and TypeScript in Vite.",
+  "main": "svelte.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KoutaHisano/svelte-counter.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/KoutaHisano/svelte-counter/issues"
+  },
+  "homepage": "https://github.com/KoutaHisano/svelte-counter#readme"
 }
