--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     ]
   },
   "dependencies": {
+    "aws-amplify": "^5.0.16",
     "uuid": "^9.0.0"
   },
   "description": "This template should help get you started developing with Svelte and TypeScript in Vite.",
